--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "echarts": "^4.2.1",
+    "vue": "^2.6.10",
+    "vue-echarts": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
